# min_curv_planner_qp_ros

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cubic_b_spline.cpp  cubic_spline.hpp  curv_min.hpp  main.cpp  plot_spline.py
boundary_publisher_example/: CMakeLists.txt  package.xml
boundary_publisher_example/data/: left_boundary.txt  right_boundary.txt
boundary_publisher_example/launch/: publish_boundary.launch
boundary_publisher_example/rviz/: boundaries.rviz
boundary_publisher_example/src/: boundary_publisher_example.py
examples/: CMakeLists.txt  example.cpp
min_curv_lib/: CMakeLists.txt  base_cubic_spline.cpp  base_cubic_spline.hpp  cubic_b_spline.cpp  cubic_b_spline.hpp  cubic_spline.cpp  cubic_spline.hpp  curv_min.cpp  curv_min.hpp  package.xml
min_curv_lib/include/min_curv_lib/: base_cubic_spline.hpp  cubic_b_spline.hpp  cubic_spline.hpp  curv_min.hpp  kd_tree_adapter.hpp  nanoflann.hpp
min_curv_lib/src/: base_cubic_spline.cpp  cubic_b_spline.cpp  cubic_spline.cpp  curv_min.cpp
min_curv_msgs/: CMakeLists.txt  package.xml
min_curv_msgs/msg/: Paths.msg
min_curv_ros_wrapper/: CMakeLists.txt  package.xml
min_curv_ros_wrapper/config/: params.yaml
min_curv_ros_wrapper/include/min_curv_ros_wrapper/: ros_wrapper.hpp
min_curv_ros_wrapper/launch/: min_curv.launch
min_curv_ros_wrapper/msg/: Paths.msg
min_curv_ros_wrapper/src/: main.cpp  ros_wrapper.cpp
scripts/: plot_results.py
