<?xml version="1.0"?>
<package format="2">
  <name>boundary_publisher_example</name>
  <version>0.0.1</version>
  <description>The boundary_publisher_example package</description>
  <maintainer email="albertgassol1@gmail.com">albert</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>min_curv_msgs</depend>
  <export>
  </export>
</package>
