<?xml version="1.0"?>
<package format="2">
  <name>min_curv_msgs</name>
  <version>0.0.0</version>
  <description>The min_curv_msgs package</description>
  <maintainer email="albertgassol1@gmail.com">albert</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <export>
  </export>
</package>
