<?xml version="1.0"?>
<package format="2">
  <name>min_curv_ros_wrapper</name>
  <version>0.0.1</version>
  <description>The min_curv_ros_wrapper package</description>
  <maintainer email="albertgassol1@gmail.com">albert</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <export>
  </export>
</package>
