<?xml version="1.0"?>
<package format="2">
  <name>min_curv_ros_wrapper</name>
  <version>0.0.1</version>
  <description>The min_curv_ros_wrapper package</description>
  <maintainer email="albertgassol1@gmail.com">albert</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>min_curv_lib</depend>
  <depend>std_msgs</depend>
  <depend>min_curv_msgs</depend>
  <depend>osqp</depend>
  <depend>OsqpEigen</depend>
  <export>
  </export>
</package>
